--- a/wwwroot/book.html
+++ b/wwwroot/book.html
@@ -54,7 +54,7 @@
                                     <div class="from-group">
                                         <label for="lastname">Your last name</label>
                                         <br>
-                                        <input type="text" name="lastname" id="lastname" placeholder="Your first name">
+                                        <input type="text" name="lastname" id="lastname" placeholder="Your last name">
                                         <br>
                                     </div>
                                 </div>
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                 </div>
-                <p>
+                <p id="printout">
                     Your first name is <span id="outfname">____</span> 
                     Your last name is <span id="outlname">____</span> 
                     email <span id="outemail">____</span> 
