--- a/wwwroot/info.html
+++ b/wwwroot/info.html
@@ -6,40 +6,32 @@
         <nav class="navbar navbar-expand-sm">  
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#section1">Section 1</a>
+                <a class="nav-link" href="#section1">About ConnectUs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#section2">Section 2</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#section3">Section 3</a>
+                <a class="nav-link" href="#section2">My Mission</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                  Section 4
+                  Me
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#section41">Link 1</a>
-                  <a class="dropdown-item" href="#section42">Link 2</a>
+                  <a class="dropdown-item" href="#section41">About Me</a>
+                  <a class="dropdown-item" href="#section42">My Education</a>
                 </div>
               </li>
             </ul>
           </nav>
           
           <div id="section1" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
-            <h1>Section 1</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+            <h1>About ConnectUs</h1>
+            <p>Text to come</p>
+            <p></p>
           </div>
           <div id="section2" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
-            <h1>Section 2</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-          </div>
-          <div id="section3" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
-            <h1>Section 3</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+            <h1>My Mission</h1>
+            <p>text to come</p>
+            <p></p>
           </div>
           <div id="section41" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
             <h1>About Me</h1>
@@ -48,8 +40,8 @@
           </div>
           <div id="section42" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
             <h1>My Education</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+            <p>Text to come</p>
+            <p></p>
           </div>
           
           <script>
