--- a/wwwroot/report.html
+++ b/wwwroot/report.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
     <body>
-        <div>
-            <label>
-              <input type="radio" name="choice-radio">
-              Yes
-            </label>
-            <label>
-              <input type="radio" name="choice-radio">
-              No
-            </label>
-          </div>
+        <div class ="doyouhavecovid">
+            <p class="covidtext">Do you have covid?</p>
+
+            <div class="col">
+                <br>
+                <button id="yesbtn" class="btn btn-light">Yes</button>
+                <button id="nobtn" class="btn btn-light">no</button>
+            </div>
+
+        </div>
           
 
  </body>
