--- a/wwwroot/book.html
+++ b/wwwroot/book.html
@@ -109,7 +109,7 @@
                                         <option value="10+">10+ people</option>
                                     </select>
                                 </div>
-                            
+                    </form>
 
                                     <div class="col">
                                         <br>
@@ -120,7 +120,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
+            </div>
+
                 <p id="printout">
                     Your first name is <span id="outfname">____</span> 
                     Your last name is <span id="outlname">____</span> 
