--- a/wwwroot/navbar.html
+++ b/wwwroot/navbar.html
@@ -18,11 +18,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#" id="home">Home</a>
                 </li>
+
+
+
                 <li class="nav-item">
-                    <a  class="nav-link" href="#" id ="book">Make a booking</a>
+                    <a class="nav-link" href="#" id="book">Make a booking</a>
                 </li>
                 <li class="nav-item">
-                    <a  class="nav-link" href="#" id="report">Report a COVID case</a>
+                    <a class="nav-link" href="#" id="report">Report a COVID case</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="test">Booking Table</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
