--- a/wwwroot/book.html
+++ b/wwwroot/book.html
@@ -11,13 +11,15 @@
                         <div class="container-time">
                             <h2 class="heading">Time Open</h2>
                             <h3 class="heading_days">Monday-Friday</h3>
-                            <p class= "open">7am-11am breakfast</p>
-                            <p class= "open">11am-10pm lunch/dinner</p>
+                            <p class="open">7am-11am breakfast</p>
+                            <p class="open">11am-10pm lunch/dinner</p>
                             <h3 class="heading_days">Saturday & Sunday</h3>
-                            <p class= "open">10am-12am breakfast</p>
-                            <p class= "open">12am-11pm lunch/dinner</p>
+                            <p class="open">10am-12am breakfast</p>
+                            <p class="open">12am-11pm lunch/dinner</p>
 
                             <h4 class="heading-phone">Call Us : 01245 671234</h4>
+                            <p>*If you would like to cancel please contact us on this number</p>
+
                         </div>
                     </div>
                 </div>
@@ -104,7 +106,7 @@
                                     </div>
                                     <div class="col">
                                         <br>
-                                        <button id="submit2" type="submit" class="btn btn-light" onClick="testResults(this.form)">>Submit</button>
+                                        <button id="submit2" type="submit" class="btn btn-light">Submit</button>
                                     </div>
                                 </div>
 
