--- a/wwwroot/info.html
+++ b/wwwroot/info.html
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="#section1">About ConnectUs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#section2">My Mission</a>
+                <a class="nav-link" href="#section2">GDPR Information</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -25,22 +25,22 @@
           
           <div id="section1" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
             <h1>About ConnectUs</h1>
-            <p>Text to come</p>
+            <p>Our job at ConnectUs is to keep everyone safe during this tough time during the coronavirus pandemic. The hospitality industry has been hard hit from closures and the enforcement of gathering track and trace information from everyone. So during the most recent lockdown, I decided to do something to aid this community. I have created a website which resteraunts and pubs can sign up to and people can book tables though us and their track and trace information will be automatically colleceted and stored and in the case of an outbreak, the respective individuals will be contacted.</p>
             <p></p>
           </div>
           <div id="section2" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
             <h1>My Mission</h1>
-            <p>text to come</p>
+            <p>At ConnectUs we make it our mission to keep everyones data safe. For this reason we have implimented a 21 day storage window for all of your information and after that everyting will be deleted. For more infomation on GDPR please follow this link. https://www.gov.uk/data-protection</p>
             <p></p>
           </div>
           <div id="section41" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
             <h1>About Me</h1>
-            <p>Hi my name is Shona Birch. I am 18 years old and have decided that I wanted to aid the hospitality industry in any way that I could.</p>
+            <p>Hi my name is Shona Birch. I am 19 years old and have decided that I wanted to aid the hospitality industry in any way that I could. I have seen that the coronavirus pandemic has had a major affect on the hospitality industry and caused a lot of stress on staff. I have had previous experience working as a server so I understand some of the issues and wanted to use my knowledge to help. This is how ConnectUs was created.</p>
 
           </div>
           <div id="section42" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
             <h1>My Education</h1>
-            <p>Text to come</p>
+            <p>Currently studting Computer Science at The University of Plymouth</p>
             <p></p>
           </div>
           
