--- a/wwwroot/report.html
+++ b/wwwroot/report.html
@@ -3,12 +3,12 @@
 
     <body>
         <div class ="doyouhavecovid">
-            <p class="covidtext">Do you have covid?</p>
+            <p class="covidtext">Have you tested positive for coronavirus after your visit to us?</p>
 
             <div class="col">
                 <br>
                 <button id="yesbtn" class="btn btn-light">Yes</button>
-                <button id="nobtn" class="btn btn-light">no</button>
+                <button id="nobtn" class="btn btn-light">No</button>
             </div>
 
         </div>
