--- a/wwwroot/staffview.html
+++ b/wwwroot/staffview.html
@@ -1,8 +1,25 @@
 <!doctype html>
 <html lang="en">
 
-    <body>
-        <H1>login complete</H1>
+<body>
+    <div class="w3-container" id="container">
+        <H1>Bookings</H1>
+        <div id="test1" class="col s12">
 
-    </body>
+
+
+
+        </div>
+    </div>
+    <div class="w3-container" id="container2">
+        <H1>Positive COVID Cases</H1>
+        <div id="covidtable" class="col s12">
+
+
+
+
+        </div>
+    </div>
+
+</body>
 </html>
