--- a/wwwroot/yes.html
+++ b/wwwroot/yes.html
@@ -7,60 +7,29 @@
                 <form class="test">
                     <div class="yesform">
                         <h1 class=repor>Report a positive coronavirus case</h1>
-                        
+
                         <br>
 
                         <div class="row">
                             <div class="col">
                                 <div class="from-group">
-                                    <label for="forename">Your first name:</label>
+                                    <label for="forename2">Your first name:</label>
                                     <br>
-                                    <input type="text" name="forename" id="forename" placeholder="Your first name">
+                                    <input type="text" name="forename" id="forename2" placeholder="Your first name">
                                     <br>
                                 </div>
                             </div>
 
                             <div class="col">
                                 <div class="from-group">
-                                    <label for="lastname">Your last name</label>
+                                    <label for="lastname2">Your last name</label>
                                     <br>
-                                    <input type="text" name="lastname" id="lastname" placeholder="Your first name">
+                                    <input type="text" name="lastname" id="lastname2" placeholder="Your first name">
                                     <br>
                                 </div>
                             </div>
-
                         </div>
-                            <br>
-                        <div class="row">
-                            <div class="col">
-                                <label for="email">Your email</label>
-                                <br>
-                                <input type="text" name="email" id="email" placeholder="Your email">
-                                <br>
-                            </div>
-                            <div class="col">
-                                <label for="email">Your phone number</label>
-                                <br>
-                                <input type="text" name="pnumber" id="pnumber" placeholder="Your phone number">
-                                <br>
-                            </div>
-                        </div>
-                        <br>
-                        <div class="row">
-                            <div class="col">
-                                <label for="date">Date</label>
-                                <br>
-                                <input type="date" name="date" id="date">
-                                <br>
-                            </div>
-                            
-                            <div class="col">
-                                <label for="time">Time</label>
-                                <br>
-                                <input type="time" name="time" id="time">
-                                <br>
-                            </div>
-                        </div>
+                        <button id="submit3" type="submit" class="btn btn-light">Submit</button>
                     </div>
                 </form>
             </div>
